# vach

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  tests.yml
crates/c-bindings/: Cargo.toml  bindings.h  build.rs
crates/c-bindings/src/: errors.rs  lib.rs  reader.rs  sample.c  writer.c  writer.rs
crates/vach/: Cargo.toml
crates/vach-benchmarks/: Cargo.toml
crates/vach-benchmarks/benches/: main.rs
crates/vach-cli/: Cargo.toml  README.md
crates/vach-cli/spec/: main.txt
crates/vach-cli/src/: main.rs
crates/vach-cli/src/app/: mod.rs
crates/vach-cli/src/cli/: mod.rs
crates/vach-cli/src/commands/: keypair.rs  list.rs  mod.rs  pack.rs  pipe.rs  unpack.rs  verify.rs
crates/vach-cli/src/utils/: mod.rs
crates/vach-cli/test_data/: test.sh
crates/vach/src/: crypto.rs  lib.rs  tests.rs
crates/vach/src/crypto_utils/: mod.rs
crates/vach/src/global/: compressor.rs  error.rs  flags.rs  header.rs  mod.rs  reg_entry.rs
crates/vach/src/loader/: archive.rs  mod.rs  resource.rs
crates/vach/src/writer/: config.rs  leaf.rs  mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip.rs  simple.rs
