[package]
name = "vach-cli"
version = "0.8.0"
edition = "2024"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	"Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A command-line tool to work with vach archive files and streams"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["command-line-utilities", "encoding", "game-development"]
keywords = ["archive", "command-line", "vach", "assets", "game"]
readme = "README.md"
include = ["src/*", "Cargo.toml", "../README.md"]

[[bin]]
name = "vach"
path = "src/main.rs"

[dependencies]
vach = { version = "0.7", features = ["all"] }
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
indicatif = "0.18"
anyhow = "1"
tabled = "0.20"
walkdir = "2"
tempfile = "3"
memmap2 = "0.9.5"
