[package]
name = "vach"
version = "0.7.3"
description = "A simple archiving format, designed for storing assets in compact secure containers"
edition = "2024"
authors = [
	"Newton Toto <nyachiengatoto@gmail.com>",
	"Jasper Fortuin <zeskeertwee@gmail.com>",
]
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["games", "compression"]
keywords = ["archive", "filesystem", "compression", "game", "assets"]
documentation = "https://docs.rs/vach"
readme = "../../README.md"
include = ["Cargo.toml", "Cargo.lock", "src/*"]

[dependencies]
thiserror = "2.0.16"

# Authentication dependencies
ed25519-dalek = { version = "2.2.0", optional = true }
simplerand = { version = "1.6.0", optional = true }

# Encryption dependencies
aes-gcm = { version = "0.10.3", features = ["aes"], optional = true }

# Compression dependencies
lz4_flex = { version = "0.11.5", optional = true, default-features = false, features = [
	"frame",
] }
snap = { version = "1.1.1", optional = true }
brotli = { version = "8.0.2", optional = true }

[dev-dependencies]
rayon = "1.11.0"

[features]
default = ["builder", "archive"]
all = ["default", "compression", "crypto", "multithreaded"]

archive = []
builder = []

crypto = ["ed25519-dalek", "aes-gcm", "simplerand"]
multithreaded = ["builder"]
compression = ["snap", "lz4_flex", "brotli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
